fix: @tailwindcss/typography로 변환시 class가 적용되지 않는 에러 수정 및 md파일 지원
- @tailwindcss/typography로 md파일이 변환시 prose 스타일이 강제로 적용되어 다크 모드일때 스타일이 적용되지 않는 버그 수정
- md 파일 지원 추가
- MDXComponents로 포스트를 렌더링 하는 방식에서 React에서 지원하는 Markdown 변환 컴포넌트로 변경

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,3 +20,15 @@ body {
 ::-webkit-scrollbar {
     display: none;
 }
+
+.prose.dark blockquote {
+    color: white;
+}
+
+.prose.dark h2 {
+    color: white;
+}
+
+.prose.dark code {
+    color: white;
+}
